# persistency

./: .bazelrc  .clang-format  .gitignore  BUILD  Cargo.toml  MODULE.bazel  README.md  TODO.md  pyproject.toml  rustfmt.toml  versions.json
.github/: CODEOWNERS
.github/workflows/: build.yml  check.yml  ci.yml  clippy.yml  component_integration_tests.yml  copyright.yml  docs.yml  gitlint.yml  license_check.yml  qnx_integration_test.yml  release.yml  rust_coverage.yml
docs/: class_diagram.puml  conf.py
docs/persistency/docs/safety_mgt/: module_codeowners.rst
docs/persistency/kvs/docs/: index.rst
docs/persistency/kvs/docs/requirements/: statistics.rst
examples/: README.md
main/: genindex.html  needs.json  objects.inv  search.html  searchindex.js
main/persistency/: index.html
main/persistency/docs/: index.html
main/persistency/docs/manual/: index.html  safety_manual.html
main/persistency/docs/release/: release_note.html
main/persistency/docs/safety_mgt/: index.html  module_codeowners.html  module_safety_package_fdr.html  module_safety_plan.html  module_safety_plan_fdr.html
main/persistency/docs/security_mgt/: module_security_package_fdr.html  module_security_plan.html  module_security_plan_fdr.html
main/persistency/docs/verification/: module_verification_report.html
main/persistency/json/docs/: component_classification.html  index.html
main/persistency/kvs/docs/: index.html
main/persistency/kvs/docs/architecture/: index.html
main/persistency/kvs/docs/requirements/: index.html
main/persistency/kvs/docs/safety_analysis/: dfa.html  fmea.html
pr-35/: index.html
pr-36/: genindex.html  index.html  search.html
pr-37/: genindex.html  index.html  objects.inv
pr-37/persistency/: index.html
pr-37/persistency/docs/: index.html
pr-37/persistency/docs/manual/: safety_manual.html
pr-37/persistency/docs/release/: release_note.html
pr-37/persistency/docs/safety_mgt/: module_safety_package_fdr.html  module_safety_plan.html  module_safety_plan_fdr.html
pr-37/persistency/docs/security_mgt/: module_security_package_fdr.html  module_security_plan.html  module_security_plan_fdr.html
pr-37/persistency/docs/verification/: module_verification_report.html
pr-37/persistency/json/docs/: component_classification.html  index.html
pr-37/persistency/kvs/docs/: index.html
pr-37/persistency/kvs/docs/architecture/: index.html
pr-37/persistency/kvs/docs/requirements/: index.html
pr-37/persistency/kvs/docs/safety_analysis/: dfa.html  fmea.html
pr-38/: needs.json  search.html
pr-38/persistency/docs/manual/: safety_manual.html
pr-38/persistency/docs/release/: release_note.html
pr-38/persistency/docs/safety_mgt/: module_safety_package_fdr.html  module_safety_plan.html  module_safety_plan_fdr.html
pr-38/persistency/docs/security_mgt/: index.html  module_security_package_fdr.html  module_security_plan.html  module_security_plan_fdr.html
pr-38/persistency/docs/verification/: module_verification_report.html
pr-38/persistency/json/docs/: component_classification.html  index.html
pr-38/persistency/kvs/docs/: index.html
pr-38/persistency/kvs/docs/architecture/: index.html
pr-38/persistency/kvs/docs/requirements/: index.html
pr-38/persistency/kvs/docs/safety_analysis/: dfa.html  fmea.html
src/cpp/src/: BUILD  demo.cpp  kvs.cpp  kvs.hpp  kvsbuilder.cpp  kvsbuilder.hpp  kvsvalue.cpp  kvsvalue.hpp
src/cpp/src/internal/: BUILD  error.cpp  error.hpp  kvs_helper.cpp  kvs_helper.hpp
src/cpp/tests/: BUILD  bm_kvs.cpp  test_kvs.cpp  test_kvs_builder.cpp  test_kvs_error.cpp  test_kvs_general.cpp  test_kvs_general.hpp  test_kvs_helper.cpp
src/rust/rust_kvs/: BUILD  Cargo.toml
src/rust/rust_kvs/examples/: backend_registration.rs  basic.rs  custom_types.rs  defaults.rs  demo.rs  snapshots.rs
src/rust/rust_kvs/src/: error_code.rs  json_backend.rs  kvs.rs  kvs_api.rs  kvs_backend.rs  kvs_backend_registry.rs  kvs_builder.rs  kvs_mock.rs  kvs_serialize.rs  kvs_value.rs  lib.rs  log.rs
src/rust/rust_kvs/tests/common/: mod.rs
src/rust/rust_kvs_tool/: BUILD  Cargo.toml
src/rust/rust_kvs_tool/src/: kvs_tool.rs
tests/: README.md
tests/cpp_test_scenarios/: BUILD
tests/cpp_test_scenarios/src/: main.cpp  test_basic.cpp  test_basic.hpp
tests/cpp_test_scenarios/src/cit/: cit.cpp  cit.hpp  test_default_values.cpp  test_default_values.hpp
tests/cpp_test_scenarios/src/helpers/: kvs_instance.cpp  kvs_instance.hpp  kvs_parameters.cpp  kvs_parameters.hpp
tests/integration_test_scenarios/: .bazelrc  BUILD  init_rpi4.build  kvs_test.sh
tests/python_test_cases/: pytest.ini  run_tests.py
tests/python_test_cases/config/: logging.json
tests/python_test_cases/tests/: conftest.py  test_cit_default_values.py  test_cit_snapshots.py
tests/rust_test_scenarios/: BUILD  Cargo.toml
tests/rust_test_scenarios/src/: main.rs  test_basic.rs
tests/rust_test_scenarios/src/cit/: default_values.rs  multiple_kvs.rs  persistency.rs  snapshots.rs
tests/rust_test_scenarios/src/helpers/: kvs_instance.rs  mod.rs
tests/test_cases/: BUILD  pytest.ini  requirements.txt  test_properties.py
tests/test_cases/tests/: BUILD  common.py  conftest.py  test_basic.py  test_cit_default_values.py  test_cit_multiple_kvs.py  test_cit_persistency.py  test_cit_snapshots.py  test_cit_supported_datatypes.py  test_functional_identity.py
tests/test_scenarios/cpp/: BUILD
tests/test_scenarios/cpp/src/: main.cpp  test_basic.cpp  test_basic.hpp
tests/test_scenarios/cpp/src/cit/: cit.cpp  cit.hpp  default_values.cpp  default_values.hpp  multiple_kvs.cpp  multiple_kvs.hpp  snapshots.cpp  snapshots.hpp  supported_datatypes.cpp  supported_datatypes.hpp
tests/test_scenarios/cpp/src/helpers/: helpers.cpp  helpers.hpp  kvs_instance.cpp  kvs_instance.hpp  (+2 more)
tests/test_scenarios/rust/: BUILD  Cargo.toml
tests/test_scenarios/rust/src/: main.rs  test_basic.rs
tests/test_scenarios/rust/src/cit/: default_values.rs  mod.rs  multiple_kvs.rs  persistency.rs  snapshots.rs  supported_datatypes.rs
tests/test_scenarios/rust/src/helpers/: kvs_instance.rs  kvs_parameters.rs  mod.rs
(+1 files in other folders)
