[workspace]
resolver = "2"
members = [
    "src/rust/rust_kvs",
    "src/rust/rust_kvs_tool",
    "tests/rust_test_scenarios",
]


[workspace.package]
version = "0.1.0"
edition = "2021"


[workspace.dependencies]
rust_kvs = { path = "src/rust/rust_kvs" }
rust_kvs_tool = { path = "src/rust/rust_kvs_tool" }
mw_log = { git = "https://github.com/eclipse-score/baselibs_rust.git", rev = "54e2af036603107039a2eca4912413763ab112e7", features = [
    "qm",
] }

adler32 = "1.2.0"
tinyjson = "2.5.1"
pico-args = "0.5"


[workspace.lints.clippy]
std_instead_of_core = "warn"
alloc_instead_of_core = "warn"


[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
