# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
module(
    name = "score_persistency",
    version = "0.2.1",
    compatibility_level = 0,
)

## Toolchains (dependencies and config)
# python
bazel_dep(name = "rules_python", version = "1.4.1")

PYTHON_VERSION = "3.12"

python = use_extension("@rules_python//python/extensions:python.bzl", "python", dev_dependency = True)
python.toolchain(
    is_default = True,
    python_version = PYTHON_VERSION,
)
use_repo(python)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip", dev_dependency = True)
pip.parse(
    hub_name = "pip_score_venv_test",
    python_version = PYTHON_VERSION,
    requirements_lock = "//tests/python_test_cases:requirements.txt",
)
use_repo(pip, "pip_score_venv_test")

# rust
bazel_dep(name = "rules_rust", version = "0.56.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust", dev_dependency = True)
rust.toolchain(
    edition = "2021",
    versions = ["1.85.0"],
)

# bazel cc rules
bazel_dep(name = "rules_cc", version = "0.1.1")

#score gcc toolchain
bazel_dep(name = "score_toolchains_gcc", version = "0.5", dev_dependency = True)

gcc = use_extension("@score_toolchains_gcc//extentions:gcc.bzl", "gcc", dev_dependency = True)
gcc.toolchain(
    sha256 = "8fa85c2a93a6bef1cf866fa658495a2416dfeec692e4246063b791abf18da083",
    strip_prefix = "x86_64-unknown-linux-gnu",
    url = "https://github.com/eclipse-score/toolchains_gcc_packages/releases/download/v0.0.3/x86_64-unknown-linux-gnu_gcc12.tar.gz",
)
use_repo(gcc, "gcc_toolchain", "gcc_toolchain_gcc")

register_toolchains(
    "@gcc_toolchain//:all",
    dev_dependency = True,
)

## Bazel registry
# Module dependencies
bazel_dep(name = "googletest", version = "1.17.0.bcr.1")

bazel_dep(name = "google_benchmark", version = "1.9.4", dev_dependency = True)

## S-CORE bazel registry
bazel_dep(name = "score_tooling", version = "1.0.3")

# ToDo: remove this once 1.0.4 is released,
# since it will contain updated cr_checker
git_override(
    module_name = "score_tooling",
    commit = "654664dae7df2700fd5840c5ed6c07ac6c61705d",  #until 1.0.4 is released
    remote = "https://github.com/eclipse-score/tooling.git",
)

# ToDo: implicit dependencies for score_tooling, but needed directly here??
bazel_dep(name = "aspect_rules_lint", version = "1.10.2")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")

# docs-as-code
bazel_dep(name = "score_docs_as_code", version = "2.0.1")

# Provides, pytest & venv
bazel_dep(name = "score_python_basics", version = "0.3.4")
bazel_dep(name = "score_platform", version = "0.4.1")
bazel_dep(name = "score_process", version = "1.3.1")

# Module deps
bazel_dep(name = "score_baselibs", version = "0.1.2")

## additional settings / config
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "score_persistency_crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
        "//src/rust/rust_kvs:Cargo.toml",
        "//src/rust/rust_kvs_tool:Cargo.toml",
        "//tests/rust_test_scenarios:Cargo.toml",
    ],
)

bazel_dep(name = "rust_qnx8_toolchain", version = "1.0.0", dev_dependency = True)
archive_override(
    module_name = "rust_qnx8_toolchain",
    strip_prefix = "qnx8",
    urls = [
        "https://github.com/qorix-group/rust-lang-qnx8/releases/download/1.0.0/qnx8_rust_toolchain.tar.gz",
    ],
)

use_repo(crate, "score_persistency_crates")

## temporary overrides / tools
# Testing utils dependency.
# Direct usage of tag in git_override reports false problem in editor, using hash of a tag
bazel_dep(name = "score_test_scenarios", version = "0.3.0")
git_override(
    module_name = "score_test_scenarios",
    commit = "a2f9cded3deb636f5dc800bf7a47131487119721",  # tag v0.3.0
    remote = "https://github.com/eclipse-score/testing_tools.git",
)

# ToDo: `-`version needed still because of indirect dependency
bazel_dep(name = "score-baselibs", version = "", dev_dependency = True)
git_override(
    module_name = "score-baselibs",
    commit = "06a27a163a2aa787e1b99f6b04feb00b413b3355",
    remote = "https://github.com/eclipse-score/baselibs.git",
)

bazel_dep(name = "score_toolchains_rust", version = "0.1", dev_dependency = True)
git_override(
    module_name = "score_toolchains_rust",
    commit = "5614e4b273f2f5302d47a05d7e58dae86f97a3c3",
    remote = "https://github.com/eclipse-score/toolchains_rust.git",
)

bazel_dep(name = "score_toolchains_qnx", version = "0.1", dev_dependency = True)
git_override(
    module_name = "score_toolchains_qnx",
    commit = "cdaa451c994f5e1f88aa6395dd516586f387d0ec",
    remote = "https://github.com/eclipse-score/toolchains_qnx.git",
)

toolchains_qnx = use_extension("@score_toolchains_qnx//:extensions.bzl", "toolchains_qnx", dev_dependency = True)
toolchains_qnx.sdp(
    sha256 = "f2e0cb21c6baddbcb65f6a70610ce498e7685de8ea2e0f1648f01b327f6bac63",
    strip_prefix = "installation",
    url = "https://www.qnx.com/download/download/79858/installation.tgz",
)
use_repo(toolchains_qnx, "toolchains_qnx_sdp")
use_repo(toolchains_qnx, "toolchains_qnx_qcc")
use_repo(toolchains_qnx, "toolchains_qnx_ifs")

bazel_dep(name = "custom_qemu", version = "1.0.0", dev_dependency = True)
archive_override(
    module_name = "custom_qemu",
    integrity = "sha256-3V2d+p7nP0tsbrVWOPYUSJogLNal43CIAHEto6Vjdfg=",
    strip_prefix = "third_party",  # matches top-level dir in the tar
    urls = [
        "https://github.com/qorix-group/custom-qemu/releases/download/1.0.0/custom_qemu.tar.gz",
    ],
)

bazel_dep(name = "platforms", version = "0.0.11")

# Registers the custom Rust toolchain wired to @qnx_rust
register_toolchains(
    "@toolchains_qnx_qcc//:qcc_aarch64",
    "@score_toolchains_rust//toolchains/aarch64-unknown-qnx8_0:toolchain_aarch64_qnx8_0",
    dev_dependency = True,
)

register_toolchains(
    "@toolchains_qnx_ifs//:ifs_x86_64",
    "@toolchains_qnx_ifs//:ifs_aarch64",
    dev_dependency = True,
)
