[package]
name = "rust_test_scenarios"
version.workspace = true
edition.workspace = true


[dependencies]
rust_kvs = { workspace = true, features = ["logging"] }
tinyjson.workspace = true
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
test_scenarios_rust = { git = "https://github.com/eclipse-score/testing_tools.git", tag = "v0.3.0" }
log = { version = "0.4.29", optional = true }
simple_logger = { version = "5.1.0", optional = true }


[features]
default = ["logging"]
score-log = []
logging = ["log", "simple_logger"]


[lints]
workspace = true
