[package]
name = "rust_test_scenarios"
version.workspace = true
edition.workspace = true


[dependencies]
rust_kvs.workspace = true
tinyjson.workspace = true
mw_log.workspace = true
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
test_scenarios_rust = { git = "https://github.com/eclipse-score/testing_tools.git", tag = "v0.3.0" }
stdout_logger = { git = "https://github.com/eclipse-score/baselibs_rust.git", rev = "54e2af036603107039a2eca4912413763ab112e7", optional = true }


[features]
default = ["stdout_logger"]
mw_logger = []


[lints]
workspace = true
