[package]
name = "rust_kvs_tool"
version.workspace = true
edition.workspace = true


[[bin]]
name = "kvs_tool"
path = "src/kvs_tool.rs"


[dependencies]
rust_kvs.workspace = true
tinyjson.workspace = true
pico-args.workspace = true
mw_log.workspace = true
stdout_logger = { git = "https://github.com/eclipse-score/baselibs_rust.git", rev = "54e2af036603107039a2eca4912413763ab112e7", optional = true }


[features]
default = ["stdout_logger"]
mw_logger = []


[lints]
workspace = true
