[package]
name = "test_scenarios"
version.workspace = true
edition.workspace = true


[dependencies]
rust_kvs.workspace = true
tinyjson.workspace = true
score_log.workspace = true
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
test_scenarios_rust = { git = "https://github.com/eclipse-score/testing_tools.git", tag = "v0.3.0" }
stdout_logger = { git = "https://github.com/eclipse-score/baselibs_rust.git", tag = "v0.0.3", optional = true }


[features]
default = ["stdout_logger"]
score_log_bridge = []


[lints]
workspace = true
